# Tiktok-techjam

./: README.md  data_cleaning.py  main.py  makefile  requirements.txt  t.py  train_hf.py
backend/: main.py  pyproject.toml  requirements.txt
backend/config/: env.py
backend/src/model/: main.py
backend/src/model/checkpoints/__MACOSX/distilbert_policy/: ._model.safetensors
backend/src/model/checkpoints/distilbert_policy/: model.safetensors
backend/src/model/data/processed/: id2label.json  val.csv
backend/src/utils/: query_google_places_api.py
checkpoints/distilbert_policy/: config.json
data/processed/: label2id.json  test.csv
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/geocoding/: route.ts
frontend/app/api/places/search/: route.ts
frontend/components/ui/: dropdown.tsx
